Few IT tests for Validation Decorator