@@ -7,7 +7,6 @@
     <version>0.1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>pl.marcinchwedczuk.javafx.validation</groupId>
   <artifactId>extras</artifactId>
   <packaging>jar</packaging>
 
@@ -17,6 +16,8 @@
   <properties>
     <extra-jvm-options-when-running-tests>
       --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+      --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+
       --add-opens pl.marcinchwedczuk.javafx.validation.extras/pl.marcinchwedczuk.javafx.validation.extras=ALL-UNNAMED
       --add-opens pl.marcinchwedczuk.javafx.validation/pl.marcinchwedczuk.javafx.validation=ALL-UNNAMED
     </extra-jvm-options-when-running-tests>
@@ -36,6 +37,10 @@
 
     <!-- Test dependencies -->
     <dependency>
+      <groupId>pl.marcinchwedczuk.javafx.validation</groupId>
+      <artifactId>test-utils</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <scope>test</scope>
@@ -43,6 +48,26 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>testfx-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>testfx-junit5</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>openjfx-monocle</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
